--- a/AppleProject.Rmd
+++ b/AppleProject.Rmd
@@ -1,17 +1,24 @@
 ---
 title: "How 'Bout 'Dem Apples: Has Modern Agriculture Reduced The Genetic Diversity of Apple Cultivars?"
-author: "Michael Jordan"
-output:
+author: "\\vspace{-8truemm}Michael Jordan"
+fontsize: 11pt
+header-includes: 
+  \usepackage{geometry}
+  \geometry{top=2.5cm,left=2.5cm,bottom=2.5cm,right=2.5cm}
+output: 
   pdf_document:
+    latex_engine: xelatex
     fig_caption: true
+mainfont: FreeSerif
 urlcolor: blue
 ---
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+\vspace{-15truemm}
 ## Abstract
 
-This paper uses a dataset of 278,231 SNPs from 1,175 accessions in Canada's Apple Biodiversity Collection (ABC) to assess whether the genetic diversity of newly developed apple cultivars has decreased over time.
+This paper uses a data set of single nucleotide polymorphisms (SNPs) from Canada's Apple Biodiversity Collection (ABC) to assess whether the genetic diversity of apple cultivars has decreased over time.
 
 ## Introduction
 
@@ -38,15 +45,13 @@ library(stringr)
 # extracting those files are at the top of PlinkRuns.R.
 ```
 
-The domestic apple (*Malus domestica*) is one of the oldest, most commonly cultivated, and most valuable fruit crops in the world, ranking second only to the banana in global gross production value (O'Rourke, 2021). Although today *M. domestica* is produced by many countries -- e.g., America, Chile, New Zealand -- it likely originated in Central Asia or Western China and evolved from other *Malus* species, primarily *M. sieversii* (Volk et al., 2021). Following initial domestication, *M. domestica* spread from Asia along the Silk Road to Europe and beyond (Volk et al., 2021).
+The domestic apple (*Malus domestica*) is one of the oldest, most commonly cultivated, and most valuable fruit crops in the world, ranking second only to the banana in gross production value (O'Rourke, 2021). Although today *M. domestica* is produced by many countries -- e.g., America, Chile, New Zealand -- it originated in Central Asia and evolved from other *Malus* species, primarily *M. sieversii* (Volk et al., 2021). Following domestication, *M. domestica* spread from Asia along the Silk Road to Europe and beyond (Volk et al., 2021).
 
-As *M. domestica* spread, trees with desirable traits were developed as cultivars through vegetative propagation (Volk et al., 2021). Asexual reproduction was necessary because apples are typically self-incompatible and highly heterozygous, meaning that a given cultivar must be pollinated by a different cultivar and that the seedlings will exhibit traits not expressed in either parent tree (Volk et al., 2021). Therefore, asexual reproduction was required to maintain desirable traits.
+As *M. domestica* spread, trees with desirable traits were developed as cultivars through vegetative propagation (Volk et al., 2021). Asexual reproduction was necessary because apples are typically self-incompatible and highly heterozygous, meaning that cultivars must be cross-bred  and offspring will exhibit traits not expressed in either parent tree (Volk et al., 2021). Therefore, asexual reproduction was required to maintain desirable traits.
 
-Prior to the industrial era apple production was regional, with small farms breeding cultivars for local tastes using trial and error  (O'Rourke, 2021). After industrialization the apple industry became increasingly structured, complex, and globally integrated as new technology allowed apples to be sold over greater distances (O'Rourke, 2021). Today, the apple industry is dominated by large vertically integrated firms that handle all aspects from production to packing to marketing (O'Rourke, 2021). As industry organization became more sophisticated, so to did apple breeding strategies. Controlled breeding programs were established by the early 1800s (Khan et al., 2021). During the 20th century, the apple industry embraced genomics and today uses technologies like genomic sequencing to develop cultivars with desirable traits (Volk et al., 2021).
+Prior to the industrial era apple production was regional, with small farms choosing new cultivars to develop largely through trial and error or chance pollination events (O'Rourke, 2021). After industrialization the industry became increasingly structured, complex, and globally integrated as new technology allowed apples to be sold over greater distances, leading to large vertically integrated firms today (O'Rourke, 2021). As industry organization became more sophisticated, so to did apple breeding strategies. Controlled breeding programs were established by the early 1800s (Khan et al., 2021), during the 20th century the apple industry embraced genomics, and today it uses modern technologies like SNP arrays to develop cultivars (Volk et al., 2021).
 
-These structural and technological developments facilitated a large globally connected industry, but they may have come at the cost of genetic diversity. Pre-industrialization, farmers would have presumably combined whatever cultivars were locally available to them and the fragmented nature of the market would have meant high global diversity. But, genetic research has shown that many accessions in collections today are clonally related to just a few commercially dominant cultivars such as McIntosh (Migicovsky et al., 2021).
-
-However, whether the genetic diversity of newly developed cultivars has actually changed over time is an open question. I hypothesize that the genetic diversity of new apple cultivars has decreased as breeding programs have increasingly exploited a small number of commercially successfully cultivars. If so, this would support the continued maintenance of heritage cultivars as an important reservoir of potentially valuable genotypes.
+Although these structural and technological developments facilitated a large globally connected industry, this may have come at the cost of genetic diversity. Research has shown that many accessions in collections today are clonally related to just a few commercially dominant cultivars (Migicovsky et al., 2021). I hypothesize that this is a recent phenomenon, with apple cultivars becoming more related and less genetic diverse over time due to increased industry organization and the use of more sophisticated breeding techniques. If so, this would support the continued maintenance of heritage cultivars as an important reservoir of potentially valuable genotypes.
 
 ## Methods
 
@@ -128,13 +133,11 @@ p3.log <- read.delim("./Data/Snps/p3_ibd.log")
 
 ```
 
-To evaluate apple cultivar genetic diversity, I used a dataset of 278,231 SNPs from 1,175 accessions in Canada's Apple Biodiversity Collection (ABC) that were produced using genotype-by-sequencing and made publicly available in [Dryad](https://datadryad.org/stash/dataset/doi:10.5061/dryad.zkh1893cd) (Migicovsky et al., 2022). To described these accessions, I used a dataset produced as part of Watts et al.'s 2022 phenomic characterization of the ABC and made available on [their lab's github](https://github.com/MylesLab/abc-phenomics).
+To evaluate my hypothesis, I used a [data set](https://datadryad.org/stash/dataset/doi:10.5061/dryad.zkh1893cd) of 278,231 SNPs from 1,175 accessions in Canada's Apple Biodiversity Collection (ABC) (Migicovsky et al., 2022). To described these accessions, I used a [data set](https://github.com/MylesLab/abc-phenomics) from a phenomic review of the ABC (Watts et al., 2022). Accessions were filtered using `r substring(R.Version()$version.string, 1, 15)` to include only *M. domestica* with either a cultivation or a release year (earliest was used). Because SNP data did not account for non-diploid cultivars, I also removed triploid accessions by using the het function in Plink v1.90 to calculate the fixation index and dropping accessions exhibiting abnormally high heterozygosity (see PloidismExploration.R). This resulted in `r nrow(apple.p.metadata)` remaining accessions, which I split into three time periods -- 1800-1899, 1900-1959, and 1960-Present -- reflecting stages in apple industry development.
 
-Accessions were filtered using `r substring(R.Version()$version.string, 1, 15)` to include only *M. domestica* with either a cultivation year or a release year (earliest year was used). Accessions were also filtered to remove likely polyploids by using the het function in Plink v1.90 to calculate the fixation index per accession and dropping accessions with a fixation index less than 0 (see PloidismExploration.R). This resulted in `r nrow(apple.p.metadata)` remaining accessions. These were split into three time periods: 1800-1899, 1900-1959, and 1960-Present. These time periods were semi-arbitrary, intended to reflect stages in industry development from early industrialization to the modern era.
+SNP quality control was conducted in Plink. SNPs were pruned for linkage disequilibrium (indep-pairwise 10 3 .05). SNPs with a minor allele frequency of less than .01 and a missingness of greater than .05 were removed. Accessions with greater than .1 missingness were removed. This resulted in `r prettyNum(as.numeric(stringr::word(p1.log[33, 1], 1)), big.mark = ",", scientific = FALSE)` SNPS and `r prettyNum(as.numeric(stringr::word(p1.log[33, 1], 4)), big.mark = ",", scientific = FALSE)` accessions for P1, `r prettyNum(as.numeric(stringr::word(p2.log[33, 1], 1)), big.mark = ",", scientific = FALSE)` SNPs and `r prettyNum(as.numeric(stringr::word(p2.log[33, 1], 4)), big.mark = ",", scientific = FALSE)` accessions for P2, and `r prettyNum(as.numeric(stringr::word(p3.log[33, 1], 1)), big.mark = ",", scientific = FALSE)` SNPs and `r prettyNum(as.numeric(stringr::word(p3.log[33, 1], 4)), big.mark = ",", scientific = FALSE)` accessions for P3.
 
-SNPs were pruned for linkage disequilibrium using the indep-pairwise function in Plink. A window size of 10 SNPs, a window shift of 3 BPs, and an $R^{2}$ of .05 were used. SNPs with a minor allele frequency of less than .01 and a missingness of greater than .05 were also removed. Accessions with greater than .1 missingness were removed. This resulted in `r prettyNum(as.numeric(stringr::word(p1.log[33, 1], 1)), big.mark = ",", scientific = FALSE)` SNPS and `r prettyNum(as.numeric(stringr::word(p1.log[33, 1], 4)), big.mark = ",", scientific = FALSE)` accessions for P1, `r prettyNum(as.numeric(stringr::word(p2.log[33, 1], 1)), big.mark = ",", scientific = FALSE)` SNPs and `r prettyNum(as.numeric(stringr::word(p2.log[33, 1], 4)), big.mark = ",", scientific = FALSE)` accessions for P2, and `r prettyNum(as.numeric(stringr::word(p3.log[33, 1], 1)), big.mark = ",", scientific = FALSE)` SNPs and `r prettyNum(as.numeric(stringr::word(p3.log[33, 1], 4)), big.mark = ",", scientific = FALSE)` accessions for P3.
-
-I estimated IBD among cultivars developed in each period as well as the genetic distance (Hamming distance) among cultivars across all periods using Plink. IBD networks were visualized using the tidygraph and ggraph R packages with a Fruchterman-Reingold layout algorithm. Only cultivars with a $\hat{\pi}$ (proportion of inheritance) greater than .125 were considered related (i.e., I filtered for 3rd degree relationships or closer). Genetic distance PCA was completed in R using the same accessions and SNPS.
+To evaluate accession relatedness, I estimated identity by descent (IBD) using Plink. Accessions with a $\hat{\pi}$ (proportion of inheritance) greater than .125 (a 3rd degree relationships or closer) were considered related. Related accessions were visualized using the tidygraph and ggraph R packages with a Fruchterman-Reingold (FR) layout algorithm using $\hat{\pi}$ as a weight. To evaluate accession genetic diversity, I calculated the genetic hamming distance between accessions using Plink and conducted PCoA with the cmdscale function in R.
 
 ## Results
 ```{r import_ibd, echo=FALSE, error=FALSE, warning=FALSE, message=FALSE}
@@ -189,7 +192,7 @@ PID <- data.frame(
 IID <- data.frame(
   IID = read.table("./Data/Snps/pca.mdist.id", header = F)[, 2])
 
-# Perform PCA
+# Perform PCoA
 mds <- cmdscale(dist, eig = T, 5)
 
 # Extract eigen vectors and bind with IDs and period
@@ -201,14 +204,15 @@ eigenvec <- dplyr::left_join(eigenvec, map2, by = join_by(IID == apple_id))
 eigen.perc <- round(((mds$eig) / sum(mds$eig)) * 100, 2)
 ```
 
-Per Figure 1, results showed that cultivar relatedness increased in each period. Looking at accession relatedness using IBD, the percentage of accessions that had at least one relationship increased from `r scales::percent(round(nrow(as_tibble(activate(p1.graph, nodes))) / nrow(p1.nodes), digits = 2))` in P1 to `r scales::percent(round(nrow(as_tibble(activate(p2.graph, nodes))) / nrow(p2.nodes), digits = 2))` in P2 to `r scales::percent(round(nrow(as_tibble(activate(p3.graph, nodes))) / nrow(p3.nodes), digits = 2))` in P3. Plotting networks of accessions with at least one relationship, we can see that cultivars became more related to each other in each period as indicated visually by increased number of connections and density of nodes. Extracting the global efficiency of each graph confirms this. From `r scales::percent(round(igraph::global_efficiency(p1.graph), digits = 2))` in P1, it increased to `r scales::percent(round(igraph::global_efficiency(p2.graph), digits = 2))` in P2 and then `r scales::percent(round(igraph::global_efficiency(p3.graph), digits = 2))` in P3.
+Per Figure 1a, cultivar relatedness increased in each period as the percentage of accessions with at least one 3rd degree or closer relationship increased from `r scales::percent(round(nrow(as_tibble(activate(p1.graph, nodes))) / nrow(p1.nodes), digits = 2))` in P1 to `r scales::percent(round(nrow(as_tibble(activate(p2.graph, nodes))) / nrow(p2.nodes), digits = 2))` in P2 to `r scales::percent(round(nrow(as_tibble(activate(p3.graph, nodes))) / nrow(p3.nodes), digits = 2))` in P3. The relatedness of accessions with at least one relationship also increased in each period. This can be seen visually in Figures 1b-d. The FR layout algorithm will place accessions that are more related closer together and increased node density is evident across periods. Extracting the global efficiency score -- which is inversely related to the distance between nodes -- of each graph confirms this. Global efficiency increased from `r scales::percent(round(igraph::global_efficiency(p1.graph), digits = 2))` in P1 to `r scales::percent(round(igraph::global_efficiency(p2.graph), digits = 2))` in P2 and to `r scales::percent(round(igraph::global_efficiency(p3.graph), digits = 2))` in P3, indicating shorter distances between nodes. Figures 1b-d also show networks becoming more connected over time. Average node degree increased from `r round(mean(degree(p1.graph)), digits = 1)` in P1 to `r round(mean(degree(p2.graph)), digits = 1)` in P2 and `r round(mean(degree(p3.graph)), digits = 1)` in P3.
 
-However, despite increased relatedness across periods, we can also see in Figure 1 that the first two principle components of the genetic distance PCA did not suggest any difference in the genetic diversity of accessions between periods. This can be concluded because accessions from all periods occupy contiguous graph space.
+However, despite relatedness increasing over time, a PCoA of the genetic distance between cultivars did not show any loss in genetic diversity. we can also see in Figure 1 that the first two principle components of the genetic distance PCoA did not suggest any difference in the genetic diversity of accessions between periods. This can be concluded because accessions from all periods occupy contiguous graph space.
 
-``` {r graph_networks, echo=FALSE, fig.align="center", fig.height=3, fig.cap="Network graphs of related accessions and PCA of SNPs across all accessions.", error=FALSE, warning=FALSE, message=FALSE}
+``` {r graph_networks, echo=FALSE, fig.align="center", fig.height=3, fig.cap="(a) Bar plot of accessions with 0 and >= 1 relationship by period, (b-d) Network graphs of related accessions for each period, (e) PCoA of Cultivar Genetic Distance.", error=FALSE, warning=FALSE, message=FALSE}
 
 # Create plots for IBD networks
 p1.plot <- ggraph::ggraph(p1.graph, layout = "fr", weights = weight) + 
+  ggplot2::ggtitle("P1: 1800-1899") +
   ggraph::geom_edge_link(aes(width = weight)) +
   ggraph::scale_edge_width(range = c(0.1, 3)) +
   ggraph::geom_node_point(
@@ -216,8 +220,11 @@ p1.plot <- ggraph::ggraph(p1.graph, layout = "fr", weights = weight) +
     shape = 21,
     fill = "green",
     color = "black") +
-  ggplot2::theme(legend.position = "none")
+  ggplot2::theme(
+    plot.title = element_text(hjust = .5, size = 10),
+    legend.position = "none")
 p2.plot <- ggraph::ggraph(p2.graph, layout = "fr", weights = weight) + 
+  ggplot2::ggtitle("P2: 1900-1959") +
   ggraph::geom_edge_link(aes(width = weight)) +
   ggraph::scale_edge_width(range = c(0.1, 3)) +
   ggraph::geom_node_point(
@@ -225,8 +232,11 @@ p2.plot <- ggraph::ggraph(p2.graph, layout = "fr", weights = weight) +
     shape = 21,
     fill = "green",
     color = "black") +
-  ggplot2::theme(legend.position = "none")
+  ggplot2::theme(
+    plot.title = element_text(hjust = .5, size = 10),
+    legend.position = "none")
 p3.plot <- ggraph::ggraph(p3.graph, layout = "fr", weights = weight) + 
+  ggplot2::ggtitle("P3: 1960-Present") +
   ggraph::geom_edge_link(aes(width = weight)) +
   ggraph::scale_edge_width(range = c(0.1, 3)) +
   ggraph::geom_node_point(
@@ -234,7 +244,9 @@ p3.plot <- ggraph::ggraph(p3.graph, layout = "fr", weights = weight) +
     shape = 21,
     fill = "green",
     color = "black") +
-  ggplot2::theme(legend.position = "none")
+  ggplot2::theme(
+    plot.title = element_text(hjust = .5, size = 10),
+    legend.position = "none")
 dummy.plot <- ggraph::ggraph(p3.graph, layout = "fr", weights = weight) + 
   ggraph::geom_edge_link(aes(width = weight)) +
   ggraph::scale_edge_width(range = c(0.1, 3)) +
@@ -248,12 +260,12 @@ dummy.plot <- ggraph::ggraph(p3.graph, layout = "fr", weights = weight) +
 related.counts <- data.frame(
   Period = c("P1", "P1", "P2", "P2", "P3", "P3"),
   Related = c(
-    "Rel.",
-    "Unrel.",
-    "Rel.",
-    "Unrel.",
-    "Rel.",
-    "Unrel."),
+    ">= 1",
+    "0",
+    ">= 1",
+    "0",
+    ">= 1",
+    "0"),
   Accessions = c(
     nrow(as_tibble(activate(p1.graph, nodes))),
     nrow(p1.nodes) - nrow(as_tibble(activate(p1.graph, nodes))),
@@ -263,23 +275,26 @@ related.counts <- data.frame(
     nrow(p3.nodes) - nrow(as_tibble(activate(p3.graph, nodes)))))
 related.counts <- related.counts %>%
   group_by(Period) %>%
-  arrange(desc(Related)) %>%
+  arrange(Related) %>%
   mutate(label_y = cumsum(Accessions))
 bar1.plot <- ggplot2::ggplot(
-  related.counts, aes(fill = Related, y = Accessions, x = Period)) + 
+  related.counts, aes(fill = Related, y = Accessions, x = Period)) +
+  ggplot2::ggtitle("Relatedness") +
   ggplot2::geom_bar(position="stack", stat="identity") +
   ggplot2::geom_text(
     aes(y = label_y, label = Accessions),
     vjust = 1.2,
     color = "white") +
   ggplot2::theme(
+    plot.title = element_text(hjust = .5, size = 10),
     legend.position = "top",
+    legend.margin=margin(t = 0, unit = "cm"),
     legend.text = element_text(size = 8),
     legend.title = element_blank(),
     axis.title.x = element_blank(),
     axis.title.y = element_blank())
 
-# Create plot for PCA
+# Create plot for PCoA
 p4.plot <- ggplot2::ggplot(data = eigenvec[!is.na(eigenvec$Period), ]) +
   ggplot2::geom_point(
     mapping = aes(x = `1`, y = `2`, color = as.factor(Period)),
@@ -290,7 +305,7 @@ p4.plot <- ggplot2::ggplot(data = eigenvec[!is.na(eigenvec$Period), ]) +
   ggplot2::geom_hline(yintercept = 0, linetype = "dotted") +
   ggplot2::geom_vline(xintercept = 0, linetype = "dotted") +
   ggplot2::labs(
-    title = "PCA of apple cultivar SNPs",
+    title = "PCoA of apple cultivar SNPs",
     x = paste0("Principle Component 1 (", eigen.perc[1], " %)"),
     y = paste0("Principle Component 2 (", eigen.perc[2], " %)")) +
   ggplot2::theme(legend.position = "top")
@@ -304,14 +319,19 @@ g1 <- cowplot::plot_grid(
   #cowplot::get_legend(dummy.plot),
   nrow = 2,
   ncol = 2,
-  labels = c("", "P1", "P2", "P3"),
-  label_size = 14,
+  labels = c("(a)", "(b)", "(c)", "(d)"),
+  label_size = 8,
   label_fontfamily = "serif",
   hjust = -.7,
-  vjust = 2.0,
+  vjust = 1.5,
   scale = 1.05)
 
-cowplot::plot_grid(g1, p4.plot)
+cowplot::plot_grid(
+  g1, p4.plot,
+  labels = c("", "(e)"),
+  label_size = 8,
+  hjust = -.7,
+  vjust = 1.5)
 ```
 
 ## Discussion
@@ -322,7 +342,7 @@ Second, I picked time periods semi-arbitrarily. It would have been preferable to
 
 Finally, Plink's estimation of IBD is imperfect. When researchers have compared Plink to other IBD methods, they have found some significant differences (Stevens et al., 2011). That said, there was also significant consistency and I was able to confirm that Plink's IBD results were reasonable by comparing them to known relationships. For example, Plink identified [Sir Prize](https://pomiferous.com/applebyname/co-op-5-id-1464) and [Clear Gold](https://pomiferous.com/applebyname/clearwater-gold-id-1373) as having a $\hat{\pi}$ of `r scales::percent(round(p3.ibd[p3.ibd$Cultivar1 == "Sir Prize" & p3.ibd$Cultivar2 == "Clear Gold", ]$PI_HAT, digits = 2))` indicating a 1st degree relationship. This makes sense, since Clear Gold is a mutation of a Golden Delicious and Sir Prize is a cross between Golden Delicious and another cultivar.
 
-Caveats aside, I think these results are cause for both caution and peace of mind regarding apple cultivar genetic diversity. On the one hand, newly developed cultivars did become more related to each other over time, supporting the idea that the industry may be increasingly relying on a small number of cultivars to develop new apples whereas in the past it may have used a wider variety. On the other hand, a PCA of genetic distance between cultivars did not show any corresponding loss in genetic diversity over time. My read of these two seemingly disparate results is that the extremely high heterozygosity of apples may have prevented a genetic bottleneck up to now despite the increasing relatedness of new cultivars.
+Caveats aside, I think these results are cause for both caution and peace of mind regarding apple cultivar genetic diversity. On the one hand, newly developed cultivars did become more related to each other over time, supporting the idea that the industry may be increasingly relying on a small number of cultivars to develop new apples whereas in the past it may have used a wider variety. On the other hand, a PCoA of genetic distance between cultivars did not show any corresponding loss in genetic diversity over time. My read of these two seemingly disparate results is that the extremely high heterozygosity of apples may have prevented a genetic bottleneck up to now despite the increasing relatedness of new cultivars.
 
 ## Conclusion
 
